2007-10-16  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-new-bbs-comment-list-page): New macro.
	(mixi-new-bbs-comment-list-regexp): New constant.
	(mixi-get-new-bbs-comments): New function.
	* sb-mixi.el (shimbun-mixi-default-group-alist): Add it.
	(shimbun-mixi-group-alist): Remove unnecessary constants.

2007-10-15  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-diary-comment-list-regexp): Follow the change of mixi.

2007-10-09  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-event-owner-regexp): Fix regexp.
	(mixi-realize-event): Follow the change above.

2007-10-07  Yoichi NAKAYAMA  <yoichi@geiin.org>

	* mixi-wl.el (mixi-wl-setup-draft-buffer): Avoid error when there is
	no recipient.

2007-10-04  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-revision): New constant.
	* sb-mixi.el (shimbun-mixi-revision): Ditto.
	* configure.ac (AM_INIT_AUTOMAKE): Change the version of this package.

2007-10-01  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-post-succeed-regexp):  Follow the change of mixi.

	* mixi.el (mixi-diary-comment-list-regexp): Follow the change of mixi.
	(mixi-get-comments): Follow the change above.

	* mixi.el (mixi-friend-nick-regexp): Follow the change of mixi.
	(mixi-friend-name-regexp): Ditto.
	(mixi-friend-sex-regexp): Ditto.
	(mixi-friend-address-regexp): Ditto.
	(mixi-friend-age-regexp): Ditto.
	(mixi-friend-birthday-regexp): Ditto.
	(mixi-friend-blood-type-regexp): Ditto.
	(mixi-friend-birthplace-regexp): Ditto.
	(mixi-friend-hobby-regexp): Ditto.
	(mixi-friend-job-regexp): Ditto.
	(mixi-friend-organization-regexp): Ditto.
	(mixi-friend-profile-regexp): Ditto.
	(mixi-realize-friend): Ditto.
	(mixi-friend-list-nick-regexp): Ditto.
	(mixi-diary-owner-nick-regexp): Ditto.
	(mixi-diary-title-regexp): Ditto.
	(mixi-diary-time-regexp): Ditto.
	(mixi-diary-content-regexp): Ditto.
	(mixi-realize-diary): Ditto.
	(mixi-diary-list-regexp): Ditto.
	(mixi-new-diary-list-regexp): Ditto.
	(mixi-get-diaries): Ditto.